[gd_scene load_steps=2 format=3 uid="uid://season_panel"]

[ext_resource type="Script" path="res://scripts/ui/season_panel.gd" id="1_season_panel"]

[node name="SeasonPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_season_panel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 0.98)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SeasonIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "赛季通行证"

[node name="SeasonName" type="Label" parent="MarginContainer/VBoxContainer/Header/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "当前季节: 春季"

[node name="TimeRemaining" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.9, 0.6, 0.3, 1)
text = "剩余: 30 天"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "×"

[node name="LevelContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LevelInfo" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LevelContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/LevelContainer/LevelInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "等级 1"

[node name="ExpLabel" type="Label" parent="MarginContainer/VBoxContainer/LevelContainer/LevelInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
text = "0 / 1000 经验"

[node name="ExpProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/LevelContainer"]
custom_minimum_size = Vector2(300, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1000.0
show_percentage = false

[node name="PremiumButton" type="Button" parent="MarginContainer/VBoxContainer/LevelContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
text = "购买高级通行证
980 钻石"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SeasonEffects" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="EffectLabel" type="Label" parent="MarginContainer/VBoxContainer/SeasonEffects"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "季节效果:"

[node name="CropBonus" type="Label" parent="MarginContainer/VBoxContainer/SeasonEffects"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 0.9, 0.5, 1)
text = "作物生长 +20%"

[node name="EnergyBonus" type="Label" parent="MarginContainer/VBoxContainer/SeasonEffects"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 0.7, 0.9, 1)
text = "能量获取 +0%"

[node name="GoldBonus" type="Label" parent="MarginContainer/VBoxContainer/SeasonEffects"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.8, 0.3, 1)
text = "金币收益 +0%"

[node name="RewardScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="RewardTrack" type="HBoxContainer" parent="MarginContainer/VBoxContainer/RewardScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ClaimAllButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "一键领取所有奖励"
